--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,23 @@ keywords = ["code-generation"]
 categories = ["code-generation"]
 readme = "README.md"
 edition = "2021"
+
+[lints.rust]
+rust_2021_compatibility = "warn"
+
+[lints.clippy]
+all = "deny"
+pedantic = "warn"
+nursery = "warn"
+cargo = "warn"
+wildcard_enum_match_arm = "warn"
+string_slice = "warn"
+indexing_slicing = "warn"
+clone_on_ref_ptr = "warn"
+try_err = "warn"
+shadow_reuse = "warn"
+empty_structs_with_brackets = "warn"
+else_if_without_else = "warn"
+use_debug = "warn"
+print_stdout = "warn"
+print_stderr = "warn"
