--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,13 @@ readme = "README.md"
 edition = "2021"
 
 [lints.rust]
-rust_2021_compatibility = "warn"
+rust_2021_compatibility = { level = "warn", priority = -1 }
 
 [lints.clippy]
-all = "deny"
-pedantic = "warn"
-nursery = "warn"
-cargo = "warn"
+all = { level = "deny", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+cargo = { level = "warn", priority = -1 }
 wildcard_enum_match_arm = "warn"
 string_slice = "warn"
 indexing_slicing = "warn"
